[package]
name = "dnx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
env_logger = "0.10.1"
hickory-resolver = "0.24.0"
hickory-server = "0.24.0"
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
simple-logging = "2.0.2"
tokio = { version = "1.35.1", features = ["full"] }
windows-service = "0.6.0"

[[bin]]
name = "service"
path = "src/service/main.rs"

[[bin]]
name = "service-installer"
path = "src/service/installer.rs"
